--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 	<meta name="keywords" content="梅梅" />
 	<meta name="description" content="世界上最美的女人，是梅梅 " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<!--<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
+	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
-	<link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.css" rel="stylesheet">
-	<link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
 
 <script>
 var _hmt = _hmt || [];
