--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta name="keywords" content="梅梅" />
 	<meta name="description" content="世界上最美的女人，是梅梅 " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<link href="css/ohmygod.css" rel="stylesheet" type="text/css"/>
+	<link href="http://7tszer.com1.z0.glb.clouddn.com/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+	<link href="http://7tszer.com1.z0.glb.clouddn.com/ohmygod.css" rel="stylesheet" type="text/css"/>
 
 <script>
 var _hmt = _hmt || [];
@@ -26,51 +26,51 @@ var _hmt = _hmt || [];
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/1.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/1.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/2.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/2.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/3.jpg" alt="...">
-				</a>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-xs-4 col-md-4">
-				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/4.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/5.jpg" alt="...">
-				</a>
-			</div>
-			<div class="col-xs-4 col-md-4">
-				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/6.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/3.jpg" alt="...">
 				</a>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/7.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/4.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/8.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/5.jpg" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
 				<a href="https://tuohongmei.github.io" class="thumbnail">
-					<img src="img/9.jpg" alt="...">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/6.jpg" alt="...">
+				</a>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-4 col-md-4">
+				<a href="https://tuohongmei.github.io" class="thumbnail">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/7.jpg" alt="...">
+				</a>
+			</div>
+			<div class="col-xs-4 col-md-4">
+				<a href="https://tuohongmei.github.io" class="thumbnail">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/8.jpg" alt="...">
+				</a>
+			</div>
+			<div class="col-xs-4 col-md-4">
+				<a href="https://tuohongmei.github.io" class="thumbnail">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/9.jpg" alt="...">
 				</a>
 			</div>
 		</div>
