--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>世界上最美的女人，是梅梅</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="梅梅" />
-	<meta name="description" content="世界上最美的女人，是梅梅 " />
+	<meta name="description" content="全世界最漂亮的女人 " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="http://7tszer.com1.z0.glb.clouddn.com/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="http://7tszer.com1.z0.glb.clouddn.com/ohmygod.css" rel="stylesheet" type="text/css"/>
@@ -47,8 +47,8 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://全世界最漂亮的女人.top" class="thumbnail">
-					<img src="http://7tszer.com1.z0.glb.clouddn.com/5.jpg" alt="...">
+				<a href="http://7tszer.com1.z0.glb.clouddn.com/Test.png" class="thumbnail">
+					<img src="http://7tszer.com1.z0.glb.clouddn.com/Test.png" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
