--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>世界上最美的女人，是梅梅</title>
+	<title>全世界最漂亮的女人</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="梅梅" />
 	<meta name="description" content="全世界最漂亮的女人 " />
