--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ var _hmt = _hmt || [];
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
-				<a href="http://7tszer.com1.z0.glb.clouddn.com/Test.png" class="thumbnail">
-					<img src="http://7tszer.com1.z0.glb.clouddn.com/Test.png" alt="...">
+				<a href="http://www.yintesoft.com/Includes/Files/employee/sw.png" class="thumbnail">
+					<img src="http://www.yintesoft.com/Includes/Files/employee/sw.png" alt="...">
 				</a>
 			</div>
 			<div class="col-xs-4 col-md-4">
