--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="全世界最漂亮的女人 " />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="http://7tszer.com1.z0.glb.clouddn.com/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-	<!--<link href="http://7tszer.com1.z0.glb.clouddn.com/ohmygod.css" rel="stylesheet" type="text/css"/>-->
-	<link href="ohmygod.css" rel="stylesheet" type="text/css"/>
+	<link href="http://7tszer.com1.z0.glb.clouddn.com/ohmygod.css" rel="stylesheet" type="text/css"/>
+
 
 <script>
 var _hmt = _hmt || [];
